fix: support small screens with flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ button {
 
 .hero-section {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: stretch;
   gap: 48px;
@@ -81,7 +82,7 @@ button {
 }
 
 .hero-content {
-  flex: 1;
+  flex: 1 0 300px;
 }
 
 .hero-content h2 {
@@ -106,11 +107,13 @@ button {
 }
 
 .hero-image {
-  flex: 1;
+  flex: 1 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--gray);
+  width: 300px;
+  min-height: 200px;
 }
 
 .info-header {
@@ -183,15 +186,19 @@ button {
 
 .call-to-action {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  gap: 32px;
   background-color: var(--nice-blue);
   color: var(--whitish);
   margin: 0 32px;
-  padding: 48px 0;
+  padding: 16px;
   width: 1000px;
   border-radius: 8px;
+}
+
+.action-text {
+  margin: 32px;
 }
 
 .action-text h2 {
